<resources>
    <string name="app_name">TrailGuide</string>
    <string name="trailguide">TrailGuide</string>
    <string name="home">Home</string>
    <string name="preferences">Preferences</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>"
    <string name="notification">Notification</string>
    <string name="prefered_animals">Select Your Most Preferred Animals</string>
    <string name="animal_1">Animal Type 1</string>
    <string name="animal_2">Animal Type 2</string>
    <string name="animal_3">Animal Type 3</string>
    <string name="welcome_message">Welcome to Yala National Park</string>
    <string name="submit">Submit</string>
    <string name="Connect">Connect</string>
    <string name="Bluetooth_Not_Connected">Bluetooth Not Connected</string>
    <string name="Bluetooth_Connected">Bluetooth Connected</string>
    <string name="animal_type">Animal Type</string>
    <string name="location">Location</string>
    <string name="timestamp">Timestamp</string>
    <string name="animal_label">Animal: %1$s</string>
    <string name="location_label">Location: %1$.6f, %2$.6f</string>
    <string name="time_label">Time: %1$s</string>


    <string-array name="Animals_array">
            <item>Leopard</item>
            <item>Bear</item>
            <item>Elephant</item>
            <item>Deer</item>
            <item>peacock</item>
        </string-array>

</resources>