<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="244dp"
        android:layout_height="73dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="14dp"
        android:text="@string/prefered_animals"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
        app:layout_constraintVertical_bias="0.13999999"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="337dp"
        android:layout_height="310dp"
        android:background="@color/basic_Col"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
        app:layout_constraintVertical_bias="0.32"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#8872FC00"
            android:text="@string/animal_1"
            android:textAlignment="center"
            android:textSize="18sp">

        </TextView>

        <Spinner
            android:id="@+id/Animal_spinner1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@color/lumince_Green"
            android:text="@string/animal_2"
            android:textAlignment="center"
            android:textSize="18sp">

        </TextView>

        <Spinner
            android:id="@+id/Animal_spinner2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#8872FC00"
            android:text="@string/animal_3"
            android:textAlignment="center"
            android:textSize="18sp">

        </TextView>

        <Spinner
            android:id="@+id/Animal_spinner3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@color/navbar_Green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="109dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="18dp"
            android:layout_toEndOf="@+id/imageView"
            android:fontFamily="casual"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:backgroundTint="@color/dark_Green"
        android:text="@string/submit"
        android:textColorLink="@color/dark_Green"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>